Add copernicus-links div to visualization sectionAdd copernicus-links div to visualization sectionAdd copernicus-links div to visualization sectionUpdate index.html
Added <div id='copernicus-links'></div> to the '2. Visualization of the plot' section as requested to display Copernicus links automatically.

--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
                 <button id="copernicus-btn">🛰️ Ouvrir Copernicus SciHub & EO Browser</button>
             </div>
         </div>
-
+        
         <div id="map-container">
             <h2>2. Visualisation de la parcelle</h2>
             <div id="map"></div>
+            <div id="copernicus-links"></div>
         </div>
+        
         <div id="imagery-container">
             <h2>3. Comparaison de l'imagerie</h2>
             <div class="image-box">
